// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P: Component should render children when passed in 1`] = `
<p
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "18px",
      "fontWeight": 200,
      "lineHeight": "1.33em",
      "margin": 0,
    }
  }
>
  Short paragraph
</p>
`;

exports[`P: Component should render correctly 1`] = `
<p
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "18px",
      "fontWeight": 200,
      "lineHeight": "1.33em",
      "margin": 0,
    }
  }
/>
`;

exports[`P: Component should render with attributes 1`] = `
<p
  id="test-id"
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "18px",
      "fontWeight": 200,
      "lineHeight": "1.33em",
      "margin": 0,
    }
  }
  title="test title"
>
  Paragraph with attributes
</p>
`;

exports[`P: Component should render with custom styles 1`] = `
<p
  style={
    Object {
      "color": "blue",
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "18px",
      "fontWeight": 200,
      "lineHeight": "1.33em",
      "margin": 0,
    }
  }
>
  Paragraph with custom styles
</p>
`;

exports[`P: Component should render with custom theme 1`] = `
<p
  style={
    Object {
      "color": "gray",
      "fontFamily": "serif",
      "lineHeight": "1.33em",
      "margin": 0,
      "size": "100px",
    }
  }
>
  Paragraph with custom theme
</p>
`;

exports[`P: Component should render with overwritten styles 1`] = `
<p
  style={
    Object {
      "color": "blue",
      "fontSize": "10px",
    }
  }
>
  Paragraph with overwritten styles
</p>
`;
